# AndreThesis

./: .gitignore
src/Thesis/: CMakeLists.txt  README.md  package.xml
src/Thesis/include/frontier_exploration/: clusteringAlgorithm.h  path_planning.hpp
src/Thesis/launch/: explore.launch  explore_livox.launch
src/Thesis/msg/: results.msg
src/Thesis/scripts/: benchmark_comparison.py  benchmark_comparison_multiuav.py  comparative_analysis_icarsc.py  comparative_analysis_icarsc2.py  compare_number.py  computation_times.py  coverage_plotter.py  dsga  get_z.py  lambda_comparison.py  odom_heatmap.py  odom_view.py  oneuav_coverage.py  results_calculator.py  results_calculator_multi_uav.py  threeuav_coverage.py  twouav_coverage.py
src/Thesis/src/: frontier_exploration.cpp  frontier_exploration_livox.cpp
src/Thesis/tmux/: disaster1res.bt  pos.yaml  session.yml  session1.yml  session2.yml  session3.yml  uav.rviz  uavview.rviz
src/Thesis/tmux/config/: tf_connector.yaml
src/Thesis/tmux/config_andre/: custom_config.yaml  octomap_planner.yaml  octomap_server.yaml  pcl_filter.yaml  world_config.yaml
src/mrs_octomap_planner/launch/: octomap_planner.launch
src/mrs_octomap_planner/src/: octomap_planner.cpp
src/octomap_mapping/octomap_server/launch/: octomap_mapping.launch  octomap_mapping_andre.launch
src/octomap_mapping/octomap_server/src/: OctomapServer.cpp
